Admin path + modification of cities and residences logic in URL
